Networking/cloud-native/istio/deploys/04.gateway/prefix/6-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*' # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  hosts: # which incoming host are we applying the proxy rules to???
    - '*'
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - uri: # IF
            prefix: '/experimental'
        - uri: # OR
            prefix: '/canary'
      route: # THEN
        - destination:
            host: fleetman-webapp
            subset: experimental
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            host: fleetman-webapp
            subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
